<resources>
    <string name="app_name">Coffee and Coin</string>
    <string name="coffee_and_coin">Coffee and Coin</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_account">Register Account</string>
    <string name="my_accounts">My Accounts</string>
    <string name="link_new_bank">Link New Bank</string>
    <string name="logout">Logout</string>
    <string name="remove">Remove</string>
    <string name="account">Account</string>
    <string name="savings_goal">Savings Goal:</string>
    <string name="home">Home</string>
    <string name="amount">Amount:</string>
    <string name="rewards">Rewards:</string>
    <string name="add_goal">Add Goal</string>
    <string name="add_rewards">Add Rewards</string>
  <string name="_0">0%</string>
</resources>
