<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".activities.LoginActivity">

  <TextView
    android:id="@+id/appTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="monospace"
    android:text="@string/coffee_and_coin"
    android:textColor="?attr/colorOnSurface"
    android:textSize="40sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.2" />

  <EditText
    android:id="@+id/editTextText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="32dp"
    android:minHeight="48dp"
    android:fontFamily="monospace"
    android:hint="@string/username"
    android:autofillHints="emailAddress"
    android:importantForAutofill="yes"
    android:inputType="textEmailAddress"
    android:textColor="?attr/colorOnSurface"
    android:textColorHint="?attr/colorTertiary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appTitle" />

  <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        android:fontFamily="monospace"
        android:hint="@string/password"
        android:autofillHints="password"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="48dp"
        android:fontFamily="monospace"
        android:text="@string/login"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

  <Button
      android:id="@+id/signUpButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:minHeight="48dp"
      android:fontFamily="monospace"
      android:text="@string/signUp"
      android:textColor="@color/white"
      android:backgroundTint="@color/balsamico"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
