<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="201dp"
        android:layout_height="112dp"
        android:text="@string/coffee_and_coin"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:text="@string/login"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="211dp"
        android:layout_height="58dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="415dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="211dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:temxt="@string/username"
        android:layout_marginStart="100dp"
        android:layout_marginTop="359dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>