<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:ignore="VisualLintBounds">

    <TextView
        android:id="@+id/Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/colorSurface"
        android:fontFamily="monospace"
        android:padding="8dp"
        android:text="@string/account"
        android:textColor="?attr/colorOnSurface"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="294dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorSurface"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Account">

        <TextView
            android:id="@+id/Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/amount"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/SavingGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/savings_goal"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />

      <FrameLayout
        android:layout_width="263dp"
        android:layout_height="325dp"
        tools:ignore="VisualLintBounds">

        <ProgressBar
          android:id="@+id/progressBar"
          style="?android:attr/progressBarStyle"
          android:layout_width="188dp"
          android:layout_height="222dp"
          android:layout_gravity="center"
          android:indeterminateTint="?attr/colorTertiary"
          tools:ignore="MissingConstraints" />
      </FrameLayout>

        <ListView
            android:id="@+id/rewards"
            android:layout_width="265dp"
            android:layout_height="289dp"
            tools:ignore="VisualLintBounds" />

    </LinearLayout>

    <Button
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="48dp"
        android:fontFamily="monospace"
        android:text="@string/home"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
